fixed sprites flickering

--- a/webSiteController/client/src/components/BattleGame/src/Components/battle/battle.css
+++ b/webSiteController/client/src/components/BattleGame/src/Components/battle/battle.css
@@ -107,3 +107,9 @@
     color:black;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+.invisible{
+    position: absolute;
+    height: 0px;
+    width:0px;
+}
