--- a/webSiteController/client/src/components/BattleGame/src/Components/component.css
+++ b/webSiteController/client/src/components/BattleGame/src/Components/component.css
@@ -100,6 +100,12 @@
 
 }
 
+.invisible{
+    position: absolute;
+    height: 0px;
+    width:0px;
+}
+
 .battleButton{
     text-align: center;
     position:fixed;
