--- a/webSiteController/client/src/components/BattleGame/src/battleApp.css
+++ b/webSiteController/client/src/components/BattleGame/src/battleApp.css
@@ -1,8 +1,8 @@
-.battleApp{
+.App{
   position: absolute;
   background: rgb(245,229,205);
   background: linear-gradient(90deg, rgba(245,229,205,1) 0%, rgba(255,255,255,1) 50%, rgba(245,229,205,1) 100%);
   width: 100vw;
-  height:100%;
+  height:100vh;
   overflow: hidden;
 }
